# hexview-Gempyre

./: .gitignore  CMakeLists.txt  README.md  buiild_all.bat
gui/: gempyre.conf  hexview.html
include/: hexview_resource.h
src/: main.cpp
